# libtiss

./: .clang-format  .clang-tidy  .travis.yml  CMakeLists.txt  README.md
cmake/: utilites.cmake
include/tiss/: sys.h  tiss.h  vector.h
src/: CMakeLists.txt  vector.c  version.c
src/tiss/: vector.c  version.c
tests/: CMakeLists.txt
tests/tiss/: tiss_vector_test.cpp
